# QuAK

./: .cproject  .gitignore  .project  CMakeLists.txt  Dockerfile  LICENSE  Makefile  Makefile.legacy  README.md  TODO.txt  valgrind-out.txt
examples/: sampleProgram.cpp  sampleProgram1.cpp  sampleProgram2.cpp  sampleProgramWitness.cpp
experiments/: CMakeLists.txt  Dockerfile  README.md  constant.cpp  drone-sim.py  drone-tab.py  drone-traj.py  eval-drone.py  gen-aut.sh  gen-fig2.py  gen-fig3.py  gen-fig4.py  gen_smooth.py  inclusion.cpp  measure-inclusion.cpp  monitor.cpp  parse-pointer-motion.py  rand-trace.py  rand_automaton.py  run-all.sh  run-constant.py  run-constant.sh  run-drone.sh  run-inclusion.py  run-inclusion.sh  run.py  utils.h
samples/: A.txt  All_Sturmian_words_contain_cubes_SUBSET.txt  All_Sturmian_words_contain_cubes_SUPERSET.txt  All_Sturmian_words_start_with_arbitarily_long_palindromes_SUBSET.txt  All_Sturmian_words_start_with_arbitarily_long_palindromes_SUPERSET.txt  All_positive_numbers_have_a_predecessor_SUBSET.txt  All_positive_numbers_have_a_predecessor_SUPERSET.txt  B.txt  BuchiCegarLoopAbstraction_SUBSET.txt  BuchiCegarLoopAbstraction_SUPERSET.txt  C1.txt  C2.txt  D1.txt  D2.txt  E1.txt  E2.txt  F.txt  Specal_factors_are_unique_SUBSET.txt  Specal_factors_are_unique_SUPERSET.txt  The_lazy_Ostrowski_representation_is_unique_SUBSET.txt  The_lazy_Ostrowski_representation_is_unique_SUPERSET.txt  ainf.txt  bakeryV3_SUBSET.txt  bakeryV3_SUPERSET.txt  bigb_SUBSET.txt  bigb_SUPERSET.txt  bigb_cut_SUBSET.txt  binf.txt  ex.txt  example_SUBSET.txt  example_SUPERSET.txt  fischerV3_SUBSET.txt  fischerV3_SUPERSET.txt  gen.py  peterson_SUBSET.txt  peterson_SUPERSET.txt  slides_example_SUBSET.txt  slides_example_SUPERSET.txt  test1.txt  test2.txt  (+8 more)
samples/boolean/: All_Sturmian_words_contain_cubes_SUPERSET.txt  All_Sturmian_words_start_with_arbitarily_long_palindromes_SUPERSET.txt  BuchiCegarLoopAbstraction_SUBSET.txt  BuchiCegarLoopAbstraction_SUPERSET.txt  Odd_and_even_work_as_expected_SUBSET.txt  bakeryV3_SUBSET.txt  bigb_SUPERSET.txt  example_SUBSET.txt  fischerV3_SUBSET.txt  peterson_SUPERSET.txt  slides_example_SUBSET.txt  slides_example_SUPERSET.txt
samples/incomplete/: B.txt
samples/rand/: 2_2_0001.txt  2_2_0002.txt  2_2_0003.txt  2_2_0004.txt  2_2_0005.txt  2_2_0006.txt  2_2_0007.txt  2_2_0008.txt  2_2_0009.txt  2_2_0010.txt  2_2_0011.txt  2_2_0012.txt  2_2_0013.txt  2_2_0014.txt  2_2_0015.txt  2_2_0016.txt  2_2_0017.txt  2_2_0018.txt  2_2_0019.txt  2_2_0020.txt  2_2_0021.txt  2_2_0022.txt  2_2_0023.txt  2_2_0024.txt  2_2_0025.txt  2_2_0026.txt  2_2_0027.txt  2_2_0028.txt  2_2_0029.txt  2_2_0030.txt  2_2_0031.txt  2_2_0032.txt  2_2_0033.txt  2_2_0034.txt  2_2_0035.txt  2_2_0036.txt  2_2_0037.txt  2_2_0038.txt  2_2_0039.txt  2_2_0040.txt  (+16960 more)
samples/rand (Copy)/: 2_2_0002.txt  2_2_0006.txt  2_2_0008.txt  2_2_0011.txt  2_2_0021.txt  2_2_0025.txt  2_2_0026.txt  2_2_0037.txt  2_2_0040.txt  2_2_0041.txt  2_2_0042.txt  2_2_0043.txt  2_2_0046.txt  2_2_0047.txt  2_2_0057.txt  2_2_0071.txt  2_2_0075.txt  2_2_0076.txt  2_2_0082.txt  2_2_0094.txt  2_2_0097.txt  2_2_0100.txt  2_2_0103.txt  2_2_0104.txt  2_2_0107.txt  2_2_0109.txt  2_2_0115.txt  2_2_0116.txt  2_2_0127.txt  2_2_0129.txt  2_2_0130.txt  2_2_0133.txt  2_2_0141.txt  2_2_0148.txt  2_2_0150.txt  2_2_0155.txt  2_2_0156.txt  2_2_0161.txt  2_2_0164.txt  2_2_0169.txt  (+1454 more)
samples/randBig/: 2_2_0001.txt  2_2_0002.txt  2_2_0003.txt  2_2_0004.txt  2_2_0005.txt  2_2_0006.txt  2_2_0007.txt  2_2_0008.txt  2_2_0009.txt  2_2_0010.txt  2_2_0011.txt  2_2_0012.txt  2_2_0013.txt  2_2_0014.txt  2_2_0015.txt  2_2_0016.txt  2_2_0017.txt  2_2_0018.txt  2_2_0019.txt  2_2_0020.txt  2_2_0021.txt  2_2_0022.txt  2_2_0023.txt  2_2_0024.txt  2_2_0025.txt  2_2_0026.txt  2_2_0027.txt  2_2_0028.txt  2_2_0029.txt  2_2_0030.txt  2_2_0031.txt  2_2_0032.txt  2_2_0033.txt  2_2_0034.txt  2_2_0035.txt  2_2_0036.txt  2_2_0037.txt  2_2_0038.txt  2_2_0039.txt  2_2_0040.txt  (+209960 more)
samples/rand_float/: 2_2_0001.txt  2_2_0004.txt  2_2_0007.txt  2_2_0013.txt  2_2_0024.txt  2_2_0027.txt  2_2_0045.txt  2_2_0048.txt  2_2_0051.txt  2_2_0052.txt  2_2_0053.txt  2_2_0056.txt  2_2_0061.txt  2_2_0063.txt  2_2_0066.txt  2_2_0069.txt  2_2_0077.txt  2_2_0083.txt  2_2_0084.txt  2_2_0085.txt  2_2_0086.txt  2_2_0092.txt  2_2_0098.txt  2_2_0099.txt  2_2_0105.txt  2_2_0106.txt  2_2_0108.txt  2_2_0110.txt  2_2_0118.txt  2_2_0120.txt  2_2_0121.txt  2_2_0122.txt  2_2_0123.txt  2_2_0125.txt  2_2_0126.txt  2_2_0134.txt  2_2_0135.txt  2_2_0140.txt  2_2_0142.txt  2_2_0147.txt  (+1438 more)
samples/rand_int/: 2_2_0001.txt  2_2_0003.txt  2_2_0005.txt  2_2_0006.txt  2_2_0011.txt  2_2_0014.txt  2_2_0015.txt  2_2_0016.txt  2_2_0017.txt  2_2_0020.txt  2_2_0021.txt  2_2_0025.txt  2_2_0026.txt  2_2_0031.txt  2_2_0032.txt  2_2_0034.txt  2_2_0035.txt  2_2_0036.txt  2_2_0038.txt  (+2999 more)
src/: Automaton.cpp  Automaton.h  CMakeLists.txt  ContextOf.cpp  ContextOf.h  Edge.cpp  Edge.h  FixpointLoop.cpp  FixpointLoop.h  FixpointStem.cpp  FixpointStem.h  Makefile  Map.cpp  Map.h  Monitor.cpp  Monitor.h  Parser.cpp  Parser.h  PostContextVariable.cpp  PostContextVariable.h  PostStem.cpp  PostStem.h  PostTargetVariable.cpp  PostTargetVariable.h  RandomAutomaton.cpp  Set.cpp  Set.h  State.cpp  State.h  StateRelation.cpp  StateRelation.h  Symbol.cpp  Symbol.h  TargetOf.cpp  TargetOf.h  Weight.cpp  Weight.h  Word.cpp  Word.h  cmake_install.cmake  (+12 more)
src/FORKLIFT/: ContextOf.cpp  ContextOf.h  FixpointLoop.cpp  FixpointLoop.h  FixpointStem.cpp  FixpointStem.h  PostContextVariable.cpp  PostContextVariable.h  PostTargetVariable.cpp  PostTargetVariable.h  StateRelation.cpp  StateRelation.h  TargetOf.cpp  TargetOf.h  inclusion.cpp  inclusion.h
src/FORQ/: ContextOf.cpp  ContextOf.h  FixpointLoop.cpp  FixpointLoop.h  FixpointStem.cpp  FixpointStem.h  PostContextVariable.cpp  PostContextVariable.h  PostTargetVariable.cpp  PostTargetVariable.h  StateRelation.cpp  StateRelation.h  TargetOf.cpp  TargetOf.h  inclusion.cpp  inclusion.h
tests/: CMakeLists.txt  test-inclusion-rand.cpp  test-is-constant.cpp  test-self-inclusion-rand.cpp
(+2 files in other folders)
